✅ Updated frontend and backend features with Gemini and JWT integration