@@ -1,37 +1,29 @@
 package com.backend.demo.controller;
 
-import com.backend.demo.service.OpenAIService;
+import com.backend.demo.dto.RewriteRequest;
+import com.backend.demo.service.GeminiService;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.HashMap;
-import java.util.Map;
-
 @RestController
-@RequestMapping("/api")
-@CrossOrigin(origins = "*") // ✅ Needed if frontend is on different port
+@RequestMapping("/api/rewrite")
+@CrossOrigin(origins = "*")
 public class RewriteController {
 
-    private final OpenAIService openAIService;
+    @Autowired
+    private GeminiService geminiService;
 
-    public RewriteController(OpenAIService openAIService) {
-        this.openAIService = openAIService;
-    }
+    @PostMapping
+    public ResponseEntity<String> rewrite(@RequestBody RewriteRequest request) {
+        String prompt = request.getPrompt();
+        String tone = request.getTone();
 
-    @PostMapping("/rewrite")
-    public ResponseEntity<Map<String, String>> rewrite(@RequestBody Map<String, String> request) {
-        String text = request.get("text");
-        String tone = request.get("tone");
-
-        System.out.println("📩 Text: " + text);
-        System.out.println("🎯 Tone: " + tone);
-
-        if (text == null || tone == null || text.isBlank() || tone.isBlank()) {
-            return ResponseEntity.badRequest().body(Map.of("error", "Invalid input"));
+        if (prompt == null || prompt.trim().isEmpty() || tone == null || tone.trim().isEmpty()) {
+            return ResponseEntity.badRequest().body("Both prompt and tone are required.");
         }
 
-        String rewritten = openAIService.rewriteEmail(text.trim(), tone.trim());
-
-        return ResponseEntity.ok(Map.of("rewritten", rewritten));
+        String result = geminiService.getGeminiResponse(prompt, tone);
+        return ResponseEntity.ok(result);
     }
 }
